# outpost

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: pytest.yml
outpost/: batch.py  crypto.py  logger.py  logging.py  position.py  protocol.py  serve.py
outpost/client/: __main__.py  client.py
outpost/client/tasks/: __init__.py  collection.py  processing.py
outpost/serve/: __main__.py  database.py  secured_resource.py  serve.py
stubs/: pynmeagps.pyi
stubs/aiocoap/: __init__.pyi  resource.pyi
stubs/aiocoap/numbers/: codes.pyi  types.pyi
stubs/asyncpg/: __init__.pyi
tests/outpost/: conftest.py  test_batch.py  test_protocol.py
tests/outpost/client/: test_client.py
tests/outpost/serve/: test_server.py
tools/: generate_keys.sh  install.sh  uninstall.sh
