[project]
name = "outpost"
version = "0.1.0"
description = "Live GPS synchronization from remote Victron systems to PostGIS"
authors = [
    {name = "Cameron Wheeler"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiocoap (>=0.4.14,<0.5.0)",
    "pynmeagps (>=1.0.50,<2.0.0)",
    "serial (>=0.0.97,<0.0.98)",
    "pyserial (>=3.5,<4.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "cryptography (>=44.0.0,<45.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.16.0"
pre-commit = "^4.2.0"
types-pyserial = "^3.5.0.20250326"
types-cryptography = "^3.3.23.2"

